# gclient2nix

./: default.nix  gclient2nix.py
gclient2nix/: GitUrlParser.hs  Tests.hs  gclient2nix.cabal  gclient2nix.hs  shell.nix
gclient2nix/common/: GitUrlParser.hs  State.hs
